updated to chapter 2

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,40 @@
-<html>
-    <body>
-        <a href="index.html">home of the cool guy</a>
-        <h1 style="color: blueviolet;">About Christian Baldinger</h1>
-        <p style="font-style: oblique;
-        ">I'm just a cool guy</p>
-        <img style="width: 350px;" src="christian_2_orig.jpg">
+<DOCTYPE html>
+</DOCTYPE>
+<html lang="en">
+
+<head>
+    <title>Save the Bees</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+</head>
+
+<body>
+    <header>
+        <h1>About Christian Baldinger</h1>
+    </header>
+
+        <nav>
+                <a href="index.html">home</a> |
+                <a href="aboutme.html">about me</a> |
+                <a href="">Form</a> |
+                <a href="">Petition</a> 
+        
+            </nav>
+    <section>
+        <p>I'm just a cool guy</p>
+        <img class="me" src="./img/christian_2_orig.jpg">
+    </section>
+    <section>
+        <h2>more about me</h2>
+        <ul class="self-info">
+            <li>cool guy</li>
+            <li>born in rheinfelden</li>
+            <li>love cheese</li>
+        </ul>
+    </section>
+    <footer><p class="creator">&copy 2018 | Created by Christian Baldninho</p></footer>
 
 
-    </body>
+
+</body>
+
 </html>
